P3/test/pl0/error/error4.pl0
const;
var;
procedure;
begin
end;

begin
end.
